--- a/cheat mod/localisation/cheat_events_l_english.yml
+++ b/cheat mod/localisation/cheat_events_l_english.yml
@@ -1,13 +1,22 @@
 ﻿l_english:
- add_all_tech: "all tech +1"
- add_all_tech_x5: "all tech +5"
- add_Technology: "Add Technology"
- add_Adm_Dip_Mal_Cash: "Add Adm Dip Mal Cash"
- add_adm: "£adm£ Adm +10k"
- add_dip: "£dip£ Dip +10k"
- add_mil: "£mil£ Mil +10k"
- add_cash: "Cash +10k"
- add_missionary_strength_and_missionary: "Add Missionary strength or Missionary"
- add_missionary: "Missionary"
- add_missionary_strength: "Missionary strength"
- missionary_strength_and_missionary: "Missionary strength and Missionary"
+ cheat_adm_tech: "Add Adm Tech"
+ cheat_dip_tech: "Add Dip Tech"
+ cheat_mil_tech: "Add Mil Tech"
+ cheat_add_all_tech: "all tech +1"
+ cheat_add_all_tech_x5: "all tech +5"
+ cheat_add_Technology: "Add Technology"
+ cheat_add_Adm_Dip_Mal_Cash: "Add Adm Dip Mal Cash"
+ cheat_add_adm: "£adm£ Adm +10k"
+ cheat_add_dip: "£dip£ Dip +10k"
+ cheat_add_mil: "£mil£ Mil +10k"
+ cheat_add_cash: "Cash +10k"
+ cheat_add_missionary_strength_and_missionary_title: "Add Missionary strength or Missionary"
+ cheat_add_missionary_strength_and_missionary_desc: "Add Missionary strength or Missionary or Missionary strength and Missionary"
+ cheat_add_missionary: "Missionary"
+ cheat_add_missionary_strength: "Missionary strength"
+ cheat_missionary_strength_and_missionary: "Missionary strength and Missionary"
+ cheat_change_culture_and_religion_title: "Change Culture or Religion"
+ cheat_change_culture_and_religion_desc: "Change Culture or Religion or Culture and Religion"
+ cheat_change_culture: "Change Culture"
+ cheat_change_religion: "Change Religion"
+ cheat_change_culture_and_religion: "Change Culture and Religion"
