--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -13,3 +13,4 @@
  infinite_power_on_title: "Infinite power On"
  infinite_power_off_title: "Infinite power Off"
  add_power_projection_title: "Add Power projection"
+ change_culture_religion_title: "Change Culture or Religion"
