--- a/cheat mod/localisation/cheat_events_l_english.yml
+++ b/cheat mod/localisation/cheat_events_l_english.yml
@@ -5,7 +5,7 @@
  cheat_add_all_tech: "all tech +1"
  cheat_add_all_tech_x5: "all tech +5"
  cheat_add_Technology: "Add Technology"
- cheat_add_Adm_Dip_Mal_Cash: "Add Adm Dip Mal Cash"
+ cheat_add_Adm_Dip_Mil_Cash: "Add Adm Dip Mil Cash"
  cheat_add_adm: "£adm£ Adm +10k"
  cheat_add_dip: "£dip£ Dip +10k"
  cheat_add_mil: "£mil£ Mil +10k"
