--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -14,4 +14,5 @@
  infinite_power_off_title: "Infinite power Off"
  add_power_projection_title: "Add Power projection"
  change_culture_religion_title: "Change Culture or Religion"
- kill_enemy_title: "Kill Enemy"
+ kill_owned_province_enemy_title: "Kill owned province enemy"
+ add_cb_territory_very_ugly_title: "Add cb Territory very ugly"
