--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -18,3 +18,5 @@
  add_cb_territory_very_ugly_title: "Add cb Territory very ugly"
  CM_army_modifiers_on_title: "Army Modifiers on"
  CM_army_modifiers_off_title: "Army Modifiers off"
+ CM_navy_modifiers_on_title: "Navy Modifiers on"
+ CM_navy_modifiers_off_title: "Navy Modifiers off"
