--- a/cheat mod/localisation/cheat_modifiers_l_english.yml
+++ b/cheat mod/localisation/cheat_modifiers_l_english.yml
@@ -2,3 +2,4 @@
  cheat_open: "Cheat Open"
  infinite_power: "Infinite power"
  CM_army_military_modifiers: "Army Modifiers"
+ CM_navy_military_modifiers: "Navy Modifiers"
