--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- cheat_menu_on_title: "A00.Cheat menu On"
- cheat_menu_off_title: "A00.Cheat menu Off"
+ cheat_menu_on_title: "00.Cheat menu On"
+ cheat_menu_off_title: "00.Cheat menu Off"
  add_Adm_Dip_Mil_Cash_title: "Add Adm Dip Mil Cash"
  manpower_add_100k_title: "Manpower +100k"
  add_Technology_title: "Add Technology"
@@ -10,13 +10,15 @@
  add_admiral_title: "Add Admiral"
  add_missionary_strength_and_missionary_title: "Add Missionary strength or Missionary"
  add_all_core_title: "Add Core"
- infinite_power_on_title: "Infinite power On"
- infinite_power_off_title: "Infinite power Off"
+ infinite_power_on_title: "01.Infinite power On"
+ infinite_power_off_title: "01.Infinite power Off"
  add_power_projection_title: "Add Power projection"
  change_culture_religion_title: "Change Culture or Religion"
  kill_owned_province_enemy_title: "Kill owned province enemy"
  add_cb_territory_very_ugly_title: "Add cb Territory very ugly"
- CM_army_modifiers_on_title: "Army Modifiers on"
- CM_army_modifiers_off_title: "Army Modifiers off"
- CM_navy_modifiers_on_title: "Navy Modifiers on"
- CM_navy_modifiers_off_title: "Navy Modifiers off"
+ CM_army_modifiers_on_title: "02.Army Modifiers on"
+ CM_army_modifiers_off_title: "02.Army Modifiers off"
+ CM_navy_modifiers_on_title: "03.Navy Modifiers on"
+ CM_navy_modifiers_off_title: "03.Navy Modifiers off"
+ CM_governing_capacity_modifiers_on_title: "04.Governing capacity Modifiers on"
+ CM_governing_capacity_modifiers_off_title: "04.Governing capacity Modifiers off"
