--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -22,3 +22,5 @@
  CM_navy_modifiers_off_title: "03.Navy Modifiers off"
  CM_governing_capacity_modifiers_on_title: "04.Governing capacity Modifiers on"
  CM_governing_capacity_modifiers_off_title: "04.Governing capacity Modifiers off"
+ CM_Missionary_intensifier_on_title: "05.Missionary_intensifier on"
+ CM_Missionary_intensifier_off_title: "05.Missionary_intensifier off"
