--- a/cheat mod/localisation/cheat_modifiers_l_english.yml
+++ b/cheat mod/localisation/cheat_modifiers_l_english.yml
@@ -4,3 +4,4 @@
  CM_army_military_modifiers: "Army Modifiers"
  CM_navy_military_modifiers: "Navy Modifiers"
  CM_governing_capacity_modifiers: "Governing capacity"
+ CM_Missionary_intensifier: "Missionary intensifier"
