--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -24,3 +24,5 @@
  CM_governing_capacity_modifiers_off_title: "04.Governing capacity Modifiers off"
  CM_Missionary_intensifier_on_title: "05.Missionary_intensifier on"
  CM_Missionary_intensifier_off_title: "05.Missionary_intensifier off"
+ CM_Add_explorer_title: "Add explorer"
+ CM_Add_conquistador_title: "Add conquistador"
