--- a/cheat mod/localisation/cheat_decisions_l_english.yml
+++ b/cheat mod/localisation/cheat_decisions_l_english.yml
@@ -26,3 +26,5 @@
  CM_Missionary_intensifier_off_title: "05.Missionary_intensifier off"
  CM_Add_explorer_title: "Add explorer"
  CM_Add_conquistador_title: "Add conquistador"
+ CM_Add_prosperity_title: "Add prosperity"
+ CM_Construction_complete_title: "Construction complete"
